<resources>
    <string name="app_name">Entrainement_OBL</string>
    <string name="title_activity_dev_inf">Dev_inf</string>
    <string name="Back">Back</string>
    <string name="Minutes">Minutes :</string>
    <string name="Secondes">Secondes :</string>
    <string name="Rep">Répétitions :</string>
    <string name="Retour">Retour</string>
    <string name="Recup">Temps de récupération</string>
    <string name="Repos">REPOS</string>
    <string name="automatique">Automatique</string>
    <string name="Name_training">Nom de l\'entrainement</string>
    <string name="Edit">Editer</string>
</resources>