<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:hint="@string/Name_training"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/txtRep"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/Rep" />

            <TextView
                android:id="@+id/txtMins"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/Minutes" />

            <TextView
                android:id="@+id/txtSecs"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/Secondes" />

            <TextView
                android:id="@+id/txtRec"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/Recup" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>